Fixed link to css- Custom accordion-button-color uncollapsed

--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,16 @@
     text-align: left;
 }
 
+/* faq */
+
+.faq-question {
+    font-weight:600;
+}
+
+.ms_accordion-button-color:not(.collapsed) {
+    color: #1969ff;
+}
+
 /* grafic-card */
 
 /* .grafic-card img {
@@ -145,3 +155,5 @@
     border: 2px solid rgb(112, 112, 7);
     height: 40px;
 } */
+
+
